SOC-1914 | fix: add letter spacing for textarea labels

--- a/front/main/app/styles/component/_discussion-inline-editor.scss
+++ b/front/main/app/styles/component/_discussion-inline-editor.scss
@@ -80,6 +80,7 @@ $success-icon-size: 80px;
 		color: $discussion-editor-textarea-label-color;
 		font-size: $discussion-editor-label-font-size;
 		font-weight: $font-weight-bold;
+		letter-spacing: .15px;
 		text-transform: uppercase;
 
 		&:first-of-type {
