--- a/front/main/app/styles/component/_discussion-standalone-editor.scss
+++ b/front/main/app/styles/component/_discussion-standalone-editor.scss
@@ -72,6 +72,7 @@ $success-icon-size: 80px;
 			bottom: 7px;
 			color: $discussion-editor-textarea-counter-color;
 			font-size: $discussion-editor-label-font-size;
+			letter-spacing: .15px;
 			line-height: $form-label-line-height;
 			position: absolute;
 			right: 0;
